# my_course1

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: reports.jsonl
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
