[project]
name = "my-course1"
version = "0.1.0"
description = ""
authors = [
    { name = "Perkhalyuk.K", email = "kyromaku@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[black]
line-length = 119
exclude = ".git"

[isort]
line-length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
